--- a/Task2/style.css
+++ b/Task2/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-    max-width: 900px;
+    max-width: 960px;
     margin: 0 auto;
 }
 
@@ -21,46 +21,36 @@ header {
     width: 100%;
 }
 
-.header-content {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-}
-
-.logo-img {
-    width: 50px;
-    height: 50px;
-
+.logo {
+  float: left;
+  margin-right: 15px;
+  padding: 10px;
+  color: #fff;
 }
 
 .site-title {
-    font-size: 20px;
-    font-weight: bold;
+  padding: 18px 0;
+  margin: 0;
+  line-height: 40px;
 }
 
 nav {
-    background-color: #34495e;
-    width: 100%;
-    padding: 15px 0;
+  position: absolute;
+  padding: 10px 0;
+  right: 0;
 }
 
-nav ul {
-    display: flex;
-    justify-content: flex-end;
-    list-style: none;
-    gap: 20px;
-}
-
-nav a {
+.header-nav a {
     color: white;
     text-decoration: none;
     font-weight: bold;
-    padding: 10px 10px;
+    padding: 8px 15px;
     border-radius: 3px;
     transition: background-color 0.5s;
+    font-size: 16px;
 }
 
-nav a:hover {
+.header-nav a:hover {
     background-color: #719ab5;
 }
 
@@ -94,11 +84,26 @@ th {
     font-weight: bold;
 }
 
+tr:nth-child(even) {
+  background: #f2f2f2;
+}
+
 footer {
     background-color: #2c3e50;
     color: white;
-    text-align: center;
+    text-align: left;
     padding: 20px 0;
     width: 100%;
     margin-top: 20px;
+}
+
+footer .container {
+    text-align: left;
+    padding-left: 0;
+    margin-left: 0;
+}
+
+footer p {
+    margin: 0;
+    padding-left: 30px;
 }
